# semi_cpp

./: .gitignore  LICENSE
gpp/: gpp.hpp
include/: semi_math.hpp  semi_numeric.hpp
math/: abs.hpp  atan.hpp  cos.hpp  exp.hpp  fmod.hpp  log.hpp  math_const.hpp  pow.hpp  sin.hpp  tan.hpp
mnist/: mnist.hpp
numeric/: complex.hpp  diffirential.hpp  dual_number.hpp  matrix.hpp
test/: CMakeLists.txt  test_abs.cpp  test_atan.cpp  test_cos.cpp  test_diffirential.cpp  test_exp.cpp  test_tan.cpp
